Completada función agregar y actualizar varios coches